--- a/proyecto-Android/Proyecto/app/src/main/AndroidManifest.xml
+++ b/proyecto-Android/Proyecto/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SegundaPantalla"></activity>
+        <activity android:name=".SegundaPantalla" />
+        <activity android:name=".TerceraPantalla"></activity>
     </application>
 
 </manifest>
