--- a/proyectos/proyecto-Android/Proyecto/app/src/main/AndroidManifest.xml
+++ b/proyectos/proyecto-Android/Proyecto/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SegundaPantalla" />
-        <activity android:name=".TerceraPantalla"></activity>
+        <activity android:name=".TerceraPantalla" />
+        <activity android:name=".CuartaPantalla"></activity>
     </application>
 
 </manifest>
