--- a/Examen.Primer.Bimestre/app/src/main/AndroidManifest.xml
+++ b/Examen.Primer.Bimestre/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.viniq.a2018movilesgr2">
+    package="com.example.usrdel.myapplication">
 
     <application
         android:allowBackup="true"
@@ -16,18 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ButtonActivity" />
-        <activity android:name=".IntentRespuestaActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:mimeType="text/plain" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".ResultadoPropioActivity" />
-        <activity android:name=".CicloVidaActivity"></activity>
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".Main3Activity" />
+        <activity android:name=".Main4Activity" />
+        <activity android:name=".Main5Activity"></activity>
     </application>
 
 </manifest>
