--- a/02-android/2018MovilesGR2/app/build.gradle
+++ b/02-android/2018MovilesGR2/app/build.gradle
@@ -7,8 +7,8 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.viniq.a2018movilesgr2"
-        minSdkVersion 23
+        applicationId "com.example.usrdel.a2018movilesgr2"
+        minSdkVersion 27
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
