--- a/02-android/2018MovilesGR2/app/build.gradle
+++ b/02-android/2018MovilesGR2/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.viniq.a2018movilesgr2"
+        applicationId "com.example.usrdel.a2018movilesgr2"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
