--- a/Disquera/disquera/app/src/main/AndroidManifest.xml
+++ b/Disquera/disquera/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.viniq.disquera">
 
+
+    <!-- Permission declaration -->
+    <permission android:name="disquera.PERMISSION" />
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -22,6 +26,9 @@
         </activity>
         <activity android:name=".CancionActivity">
         </activity>
+
+
+
     </application>
 
 </manifest>
