--- a/02-android/2018MovilesGR2/app/build.gradle
+++ b/02-android/2018MovilesGR2/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.github.kittinunf.fuel:fuel-android:1.13.0'
     implementation 'com.beust:klaxon:5.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
 }
+apply plugin: 'com.google.gms.google-services'
